# mlir-c-api-attribute-issue

./: CMakeLists.txt  README.md  ifdef.c
